[feature #166117090]update css

--- a/css/style.css
+++ b/css/style.css
@@ -101,6 +101,12 @@ body {
     float: left;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
  }
+
+ /* @media screen and (min-width: 1024px) {
+    .btn-outline-primary {
+        float: left;
+     }
+ } */
  
  .btn-outline-primary:hover {
     background-color: #0DB8DE;
@@ -108,7 +114,7 @@ body {
  }
  
  .login-btm {
-    float: left;
+    float: right;
  }
  
  .login-button {
